cmake_minimum_required(VERSION 2.8)
project( imageStich )
add_definitions(-std=c++11)
find_package( OpenCV REQUIRED )
include_directories(${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} )
add_executable(imageStich imageStich.cpp )
target_link_libraries( imageStich ${catkin_INCLUDE_DIRS} ${OpenCV_LIBS} )
