cmake_minimum_required(VERSION 2.8)
#add_definitions(-std=c++11)
project( fisheyey )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( fisheyey undistored.cpp )
target_link_libraries( fisheyey ${OpenCV_LIBS} )

project( featureFinder )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( featureFinder featureFinder.cpp )
target_link_libraries( featureFinder ${OpenCV_LIBS} )

project( featureMatch )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( featureMatch featureMatch.cpp )
target_link_libraries( featureMatch ${OpenCV_LIBS} )

project( project )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( project project.cpp)
target_link_libraries( project ${OpenCV_LIBS} )

project( findSeam )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( findSeam findSeam.cpp )
target_link_libraries( findSeam ${OpenCV_LIBS} )

project( imageStitch )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( imageStitch imageStitch.cpp )
target_link_libraries( imageStitch ${OpenCV_LIBS} )